--- a/app/public/css/stylesbackup.css
+++ b/app/public/css/stylesbackup.css
@@ -1,10 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro:400,400italic,700,700italic);@import url(https://fonts.googleapis.com/css?family=Work+Sans:400,500,700);#app, #root {
+#app, #root {
   height: 100%; }
 
 html,
 body,
 .page {
-  font-family: 'Anonymous Pro';
+  font-family: 'Hind', Arial, sans-serif;
   font-weight: 300;
   height: 100%;
   width: 100%;
@@ -48,10 +48,10 @@ button {
   font-size: 18px;
   cursor: pointer;
   outline: none;
-  font-family: 'Anonymous Pro'; }
+  font-family: 'Hind', Arial, sans-serif; }
 
 input {
-  font-family: 'Anonymous Pro'; }
+  font-family: 'Hind', Arial, sans-serif; }
 
 h1, h2 {
   font-family: 'Work Sans', sans-serif; }
@@ -1103,7 +1103,9 @@ a i {
 .following-activity {
   padding-top: 20px;
   font-weight: 400;
-  background-color: #f5f5f5; }
+  background: -webkit-linear-gradient(50deg,#2096ff,#05ffa3)!important;
+  background: -o-linear-gradient(50deg,#2096ff,#05ffa3)!important;
+  background: linear-gradient(40deg,#2096ff,#05ffa3)!important; }
 
 .following-activity .follow-btn button {
   color: #000;
@@ -1130,7 +1132,7 @@ a i {
 .landing {
   height: 100%;
   width: 100%;
-  background-image: url("//react-example-app.imgix.net/defaults/landing.png?auto=enhance&fit=crop&fm=png&dpr=2");
+  background-image: url("https://img.news.gr/sa/santorini-3.jpg?v=20171006151609&x78465");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
