--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,8 +7,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1.0">
-
-    <link rel="stylesheet" href="//api.tiles.mapbox.com/mapbox-gl-js/v0.17.0/mapbox-gl.css" />
+    
+    <script src="//d26b395fwzu5fz.cloudfront.net/3.4.0/keen.min.js" type="text/javascript"></script>
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
     <link rel="stylesheet" href="<%= css %>" />
 
@@ -27,9 +29,6 @@
   <body>
 
     <div id="app"></div>
-
-    <script src="//d26b395fwzu5fz.cloudfront.net/3.4.0/keen.min.js" type="text/javascript"></script>
-    <script src="//api.tiles.mapbox.com/mapbox-gl-js/v0.17.0/mapbox-gl.js"></script>
     <script src="/js/app.js"></script>
 
   </body>
